--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cleantext==1.1.4
-Flask==3.0.1
-Flask_SocketIO==5.3.6
-google_api_python_client==2.102.0
+Flask==3.*
+Flask_SocketIO>=5.3.*
+google_api_python_client>=2.100.0
 numpy>=1.24
-Requests==2.31.0
-transformers==4.34.0
+Requests>=2.28.0
+transformers>=4.36.0
